[package]
name = "worker-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
flate2 = "1"
time = { version = "0.3", features = ["macros"] }

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
